# config/openapi.json
@@ -510,6 +510,11 @@
             "title": "Name",
             "description": "The name of the DeFi protocol."
           },
+          "logo_url": {
+            "type": "string",
+            "title": "Logo Url",
+            "description": "URL of the DeFi protocol logo."
+          },
           "created_at": {
             "type": "string",
             "format": "date-time",
@@ -524,7 +529,7 @@
           }
         },
         "type": "object",
-        "required": ["id", "name", "created_at", "updated_at"],
+        "required": ["id", "name", "logo_url", "created_at", "updated_at"],
         "title": "DefiRead"
       },
       "ErrorDetail": {
